<resources>
    <string name="app_name">PRO Formula 1</string>
    <string name="home_screen_name">PRO FORMULA 1</string>
    <string name="championship_screen_name">ЧЕМПИОНАТ</string>
    <string name="title_home">Главная</string>
    <string name="title_championship">Чемпионат</string>
    <string name="title_calendar">Календарь</string>
    <string name="title_content">Контент</string>
    <string name="title_seasons">Сезоны</string>
    <string name="soon">Скоро</string>
    <string name="till"> - </string>
    <string name="stage_name">Название Гран-при</string>
    <string name="stage_place">Место проведения Гран-при</string>
    <string name="where_see">Где смотреть?</string>
    <string name="about_stage">Об этапе</string>
    <string name="references">Ссылки</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_10">10</string>
    <string name="pilot_name">Имя пилота</string>
    <string name="team_name">Команда</string>
    <string name="time">Время</string>
    <string name="points">Очки</string>
    <string name="individual_standings">Личный зачет</string>
    <string name="team_standings">Командный зачет</string>
    <string name="stages">Этапы</string>
    <string name="documentation_team_name">Полное название команды</string>
    <string name="_20">20</string>
    <string name="_19">19</string>
    <string name="_18">18</string>
    <string name="_17">17</string>
    <string name="_16">16</string>
    <string name="_15">15</string>
    <string name="_14">14</string>
    <string name="_13">13</string>
    <string name="_12">12</string>
    <string name="_11">11</string>
    <string name="winner_or_date">Победитель или дата</string>
    <string name="calendar_screen_name">КАЛЕНДАРЬ</string>
    <string name="content_screen_name">КОНТЕНТ</string>
    <string name="author_name">Имя автора</string>
    <string name="information_about_author">Описание его контента Описание его контента Описание его контента</string>
    <string name="network_reference">Ссылка на социальную сеть</string>
    <string name="seasons_screen_title">СЕЗОНЫ</string>
    <string name="season">СЕЗОН</string>
    <string name="champion">Чемпион:</string>
    <string name="constructor">Конструктор:</string>
    <string name="pilots">Пилоты</string>
    <string name="teams">Команды</string>
    <string name="notifications_dialog_fragment">УВЕДОМЛЕНИЯ</string>
    <string name="free_practise">Свободные заезды</string>
    <string name="practise_1">Практика №1</string>
    <string name="practise_2">Практика №2</string>
    <string name="practise_3">Практика №3</string>
    <string name="qualification">Квалификация</string>
    <string name="race">Гонка</string>
    <string name="constructors_cup">Кубок конструкторов</string>
    <string name="schedule">Расписание:</string>
    <string name="about_recently_stage">Видео о прошедшем Гран-при</string>
    <string name="videos_about_grang_prix">Видео о Гран-при</string>
</resources>