<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/animated_frame"
    android:paddingStart="7dp"
    android:paddingEnd="7dp"
    android:layout_marginBottom="10dp"
    android:id="@+id/seasons_screen_recycler_view_item">


    <ImageView
        android:id="@+id/season_logo"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginBottom="7dp"
        android:layout_marginTop="7dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/black_divider"
        android:layout_width="4dp"
        android:layout_height="0dp"
        android:layout_marginStart="7dp"
        android:background="@color/black"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/season_logo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/season_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="3dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/season"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/black_divider"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/season_winner_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/champion"
        android:textColor="@color/gold"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/season_winner_team_title"
        app:layout_constraintStart_toEndOf="@+id/black_divider"
        android:layout_marginStart="7dp"/>

    <ImageView
        android:id="@+id/season_winner_pilot_flag"
        android:layout_width="18dp"
        android:layout_height="10dp"
        app:layout_constraintBottom_toTopOf="@+id/season_winner_team_title"
        app:layout_constraintStart_toEndOf="@+id/season_winner_title"
        app:layout_constraintTop_toTopOf="@+id/season_winner_title"
        android:layout_marginStart="3dp"
        android:scaleType="center"/>

    <TextView
        android:id="@+id/season_winner_pilot_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/pilot_name"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/season_winner_team"
        app:layout_constraintStart_toEndOf="@+id/season_winner_pilot_flag"
        android:layout_marginStart="2dp"/>

    <TextView
        android:id="@+id/season_winner_team_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/constructor"
        android:textColor="@color/gold"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/black_divider"
        android:layout_marginStart="7dp"
        android:layout_marginBottom="7dp"/>

    <ImageView
        android:id="@+id/season_winner_team_logo"
        android:layout_width="18dp"
        android:layout_height="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/season_winner_team_title"
        app:layout_constraintTop_toTopOf="@+id/season_winner_team_title"
        android:layout_marginStart="3dp"
        android:layout_marginBottom="7dp"
        android:scaleType="centerInside"/>

    <TextView
        android:id="@+id/season_winner_team"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/team_name"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/season_winner_team_logo"
        app:layout_constraintTop_toTopOf="@+id/season_winner_team_title"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="7dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>