<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/black">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp">

        <LinearLayout
            android:id="@+id/selected_season_back_button"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@drawable/animated_frame"
            android:gravity="center"
            android:padding="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/selected_season_back_button_image_view"
                android:layout_width="32dp"
                android:layout_height="match_parent"
                android:background="@drawable/back_button_to_right"
                android:padding="5dp"
                android:scaleType="centerInside" />
        </LinearLayout>

        <TextView
            android:id="@+id/selected_season_screen_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_bold"
            android:gravity="right"
            android:text="@string/season"
            android:textColor="@color/red"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/selected_season_tabLayout"
        android:layout_width="match_parent"
        android:layout_height="28dp"
        android:background="@drawable/simple_frame"
        app:tabTextAppearance="@style/tab_text"
        app:tabTextColor="@color/white"
        app:tabSelectedTextColor="@color/red"
        app:tabIndicatorHeight="2dp"
        app:tabIndicatorFullWidth="false"
        app:tabGravity="fill"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="1dp"
        android:layout_marginStart="1dp">

        <com.google.android.material.tabs.TabItem
            android:text="@string/pilots"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.tabs.TabItem
            android:text="@string/teams"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <com.google.android.material.tabs.TabItem
            android:text="@string/stages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/selected_season_viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <FrameLayout
        android:visibility="gone"
        android:id="@+id/selected_season_FrameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>
</LinearLayout>