<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/stage_results_position"
        android:text="22"
        android:textColor="@color/white"
        android:textSize="13sp"
        android:layout_width="22dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_semibold"
        android:paddingEnd="2sp"/>

    <LinearLayout
        android:id="@+id/stage_results_pilot_layout"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingEnd="3dp">

        <ImageView
            android:id="@+id/stage_results_pilot_flag"
            android:layout_width="20dp"
            android:layout_height="15dp"
            android:scaleType="centerInside"/>

        <TextView
            android:id="@+id/stage_results_pilot_name"
            android:paddingLeft="2sp"
            android:layout_weight="0.5"
            android:text="@string/pilot_name"
            android:textColor="@color/white"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:fontFamily="@font/open_sans"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/stage_results_team_layout"
        android:layout_width="115dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingEnd="4dp"
        android:layout_marginBottom="2dp">

        <ImageView
            android:id="@+id/stage_results_team_logo"
            android:layout_width="20dp"
            android:layout_height="15dp"
            android:scaleType="centerInside"/>

        <TextView
            android:id="@+id/stage_results_team_name"
            android:paddingStart="2sp"
            android:layout_weight="0.5"
            android:text="@string/team_name"
            android:textColor="@color/white"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="13sp"
            android:fontFamily="@font/open_sans"/>
    </LinearLayout>

    <TextView
        android:id="@+id/stage_results_time"
        android:text="@string/time"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans"
        android:textSize="13sp"
        android:layout_weight="1"
        android:gravity="center" />

    <TextView
        android:id="@+id/stage_results_points"
        android:text="+25"
        android:textColor="@color/white"
        android:layout_width="28dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans"
        android:gravity="right"
        android:textSize="13sp" />
</LinearLayout>