<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.seasons.SeasonsFragment"
    android:orientation="vertical">

    <TextView
        android:id="@+id/seasons_screen_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:fontFamily="@font/open_sans_bold"
        android:gravity="center"
        android:text="@string/seasons_screen_title"
        android:textColor="@color/red"
        android:textSize="30sp"/>

    <ScrollView
        android:id="@+id/seasons_screen_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/seasons_screen_scroll_view_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp">

            <LinearLayout
                android:id="@+id/season_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/simple_frame"
                android:paddingRight="7dp"
                android:paddingLeft="7dp"
                android:layout_marginBottom="8dp">

                <ImageView
                    android:id="@+id/season_logo"
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    android:background="@drawable/flag"
                    android:layout_marginTop="7dp"
                    android:layout_marginBottom="7dp"/>

                <LinearLayout
                    android:id="@+id/black_divider"
                    android:layout_marginStart="7dp"
                    android:layout_marginEnd="7dp"
                    android:layout_width="4dp"
                    android:layout_height="match_parent"
                    android:background="@color/black"
                    android:orientation="horizontal" />

                <RelativeLayout
                    android:id="@+id/season_information_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingTop="2dp"
                    android:paddingBottom="4dp">

                    <TextView
                        android:id="@+id/season_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/season"
                        android:fontFamily="@font/open_sans_bold"
                        android:textSize="20sp"
                        android:textColor="@color/white"/>

                    <LinearLayout
                        android:id="@+id/season_winners_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_alignParentBottom="true">

                        <LinearLayout
                            android:id="@+id/season_winner_pilot_layout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:gravity="center">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/champion"
                                android:fontFamily="@font/open_sans_bold"
                                android:textSize="12sp"
                                android:textColor="@color/gold"/>

                            <ImageView
                                android:id="@+id/season_winner_pilot_flag"
                                android:layout_width="15dp"
                                android:layout_height="10dp"
                                android:background="@drawable/flag"
                                android:layout_marginLeft="3dp"
                                android:layout_marginRight="3dp"/>

                            <TextView
                                android:id="@+id/season_winner_pilot_name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/pilot_name"
                                android:fontFamily="@font/open_sans_bold"
                                android:textSize="12sp"
                                android:textColor="@color/white"/>

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/season_winner_team_layout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:gravity="center">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/constructor"
                                android:fontFamily="@font/open_sans_bold"
                                android:textSize="12sp"
                                android:textColor="@color/gold"/>

                            <ImageView
                                android:id="@+id/season_winner_team_logo"
                                android:layout_width="15dp"
                                android:layout_height="10dp"
                                android:background="@drawable/flag"
                                android:layout_marginLeft="3dp"
                                android:layout_marginRight="3dp"/>

                            <TextView
                                android:id="@+id/season_winner_pilot_team"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/team_name"
                                android:fontFamily="@font/open_sans_bold"
                                android:textSize="12sp"
                                android:textColor="@color/white"/>
                        </LinearLayout>
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>